# skylinemed

./: .gitignore  README.md  Start.bat  app.go  build.ps1  build.spec  go.mod  go.sum  grab.py  grab91160.db  main.go  main.py  main_gui.py  notify_config.json  patch_gui.py  pyside_gui.py  quicksort_rust.rs  quicksort_zig.zig  requirements.txt  run.bat  setup.py  test_hybrid.py  test_hybrid_threaded.py  test_qr.py  test_qr_cffi.py  test_qr_poll.py  wails.json
.github/workflows/: build_windows.yml  release.yml
core/: async_client.py  async_grab.py  client.go  client.py  cookies.go  database.py  errors.go  filter.py  grab.py  grabber.go  logger.py  notifier.py  paths.go  proxy.go  proxy_pool.py  qr_login.go  qr_login.py  state.go  task_manager.py  tls_client.py  types.go  updater.py
docs/: contract.md
docs/sample_payloads/: deps_response.json  grab_config.json  hospitals_response.json  schedule_response.json  submit_order_response.json  ticket_detail_response.json  user_state.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
gui/: __init__.py
gui/assets/: style.qss
gui/components/: cards.py  combo_box.py  log_viewer.py  (+1 more)
legacy_cli/: README.md  main.py  setup.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: cookies.json  user_state.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: client.rs  cookies.rs  errors.rs  grabber.rs  mod.rs  paths.rs  proxy.rs  qr_login.rs  state.rs  types.rs
(+22 files in other folders)
