[package]
name = "quick-doctor"
version = "0.1.0"
description = "医院挂号助手 - Hospital Appointment Assistant"
authors = ["QuickDoctor Team"]
edition = "2021"

[lib]
name = "quick_doctor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync", "time", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls", "gzip", "brotli"] }
scraper = "0.20"
thiserror = "2"
directories = "5"
base64 = "0.22"
regex = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
cookie = "0.18"
cookie_store = "0.21"
log = "0.4"
env_logger = "0.11"
tokio-util = "0.7"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
